V0.14-svn
* The display for the title and download status no longer gets ugly when the 
  title is long. Now the download status will always be displayed, and the title 
  truncated
V0.14 2005-12-29
* System tray icon, supports hiding/showing the window, quitting the program, 
  shows download status
* Application icon
* Added ability to defer events within the GUI, so that if the GUI hasn't yet 
  been displayed, messages or actions can be buffered until the GUI comes up
V0.13 2005-12-16:
* Fixed bug that made download of MP3s break (oops)
* Very minor change to how resuming is handled
V0.12 2005-11-28:
* Started keeping changelog
* Added ':' to characters that are converted to '_' to allow saving files on a 
  fat32 partition
* Better checking to see if the result of the HTTP request is actually an 
  attachment
* No longer allow the server to not resume if we are expecting it (this is 
  temporary, to allow something else to be fixed quickly)
* *.emp file filter used by default in open dialogue